// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: comment MultiLineComment 1`] = `
Object {
  "comment": " this is comment ",
}
`;

exports[`parser: comment MultiLineComment: 2 1`] = `
Array [
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  Object {
    "comment": " 
                this is comment 
            ",
  },
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
]
`;

exports[`parser: comment MultiLineComment: 3 1`] = `
Array [
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  Object {
    "comment": "*
             * this is comment
             ",
  },
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
]
`;

exports[`parser: comment MultiLineComment: 4 1`] = `
Array [
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  Object {
    "comment": "*
             * test it in typescript playgorund:
             * 
             * type url = \`http://admin:123456@github.com:8080\`;
             * type result = parseURL<url>
             ",
  },
  "
",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
  " ",
]
`;
